<resources>
    <string name="app_name">PMDM</string>
    <string name="Ut01Ex01">PMDM</string>
    <string name="date">01/01/2022</string>

    <string name="tittle">Hamburguesa</string>

    <string name="description">hamburguesa de queso y carne de vacuno con lechuga de granja y tomates de feria y queso vegano
    con albahaca y perejil asdasasdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd</string>


    <string name="form_label_name">nombre:</string>

    <string name="form_label_surname">apellidos:</string>

    <string name="form_label_save">guardar</string>

</resources>