<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"

    >

    <TextView

        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_label_name"
        />


    <EditText
        android:id="@+id/inputName"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />

    <Space

        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView

        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_label_surname"
        />


    <EditText
        android:id="@+id/inputSurname"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />


    <Button
        android:id="@+id/actionSave"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_label_save"
        />


</LinearLayout>
